--- a/frontend/index.html
+++ b/frontend/index.html
@@ -228,6 +228,7 @@
         .project-image {
             width: 100%;
             height: 180px;
+            background-image: url('Screenshot 2025-08-25 225342.png');
             object-fit: cover;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
@@ -732,15 +733,15 @@
         <!-- Projects Grid -->
         <div class="projects-grid">
             <div class="project-card">
-                <div class="project-image"></div>
+                <div class="project-image" style="background-image: url('c:\Users\GIRISH\Pictures\Screenshots\Screenshot 2025-08-25 225342.png');"></div>
                 <div class="project-content">
                     <div class="project-header">
                         <h3 class="project-title">Portfolio</h3>
                         <span class="project-badge">Check</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link">Github</a>
-                        <a href="#" class="project-link">View ↗</a>
+                        <a href="https://github.com/girish12345678910/my-portfolio" class="project-link">Github</a>
+                        <a href="my-portfolio-eight-beryl-97.vercel.app" class="project-link">View ↗</a>
                     </div>
                     <p class="project-description">
                         My personal portfolio 
