Initial portfolio commit

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -741,7 +741,7 @@
                     </div>
                     <div class="project-links">
                         <a href="https://github.com/girish12345678910/my-portfolio" class="project-link">Github</a>
-                        <a href="my-portfolio-eight-beryl-97.vercel.app" class="project-link">View ↗</a>
+                        <a href="https://my-portfolio-eight-beryl-97.vercel.app/" class="project-link">View ↗</a>
                     </div>
                     <p class="project-description">
                         My personal portfolio 
