Initial portfolio commit

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
 
         /* Dark mode styles */
         body.dark {
-            background-color: #0f172a;
+            background-color: #03050a;
             color: #f1f5f9;
         }
 
