just added new project

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -819,7 +819,7 @@ document.addEventListener('click', (e) => {
                     </div>
                     <div class="project-links">
                         <a href="#" class="project-link">Github</a>
-                        <a href="#" class="project-link">View ↗</a>
+                        <a href="https://octopus-rrty.vercel.app/" class="project-link">View ↗</a>
                     </div>
                     <p class="project-description">
                         Anonomous chat web application
