--- a/frontend/index.html
+++ b/frontend/index.html
@@ -818,7 +818,7 @@ document.addEventListener('click', (e) => {
                         <span class="project-badge building">Building</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link">Github</a>
+                        <a href="https://github.com/girish12345678910/Oktopus/tree/main" class="project-link">Github</a>
                         <a href="https://octopus-rrty.vercel.app/" class="project-link">View ↗</a>
                     </div>
                     <p class="project-description">
