--- a/frontend/index.html
+++ b/frontend/index.html
@@ -811,11 +811,11 @@ document.addEventListener('click', (e) => {
             </div>
 
             <div class="project-card">
-                <div class="project-image" style="background: linear-gradient(135deg, #1e293b 0%, #334155 100%);"></div>
+                <div class="project-image" style="background-image:image(Screenshot 2025-08-27 204241.png);"></div>
                 <div class="project-content">
                     <div class="project-header">
                         <h3 class="project-title">Oktopus</h3>
-                        <span class="project-badge building">Building</span>
+                        <span class="project-badge building">Live</span>
                     </div>
                     <div class="project-links">
                         <a href="https://github.com/girish12345678910/Oktopus/tree/main" class="project-link">Github</a>
